JS: implement toast.

--- a/www/picow.css
+++ b/www/picow.css
@@ -103,6 +103,16 @@ button {
     }
 }
 
+#toast {
+    color: red;
+    text-align: center;
+}
+
+#toast.row:after {
+    content: "";
+    margin-bottom: 2vh;
+}
+
 footer {
     width: 100%;
     text-align: center;
